--- a/config.yaml
+++ b/config.yaml
@@ -1,25 +1,25 @@
 quote: EUR
-symbols: [BTC, ETH, ADA, SOL, XRP]
-timeframe: "5m"
+symbols: [BTC, ETH, ADA, SOL, XRP, LTC]
+timeframe: "15m"
 
 signals:
   use_sma: true
-  sma_fast: 9
-  sma_slow: 21
+  sma_fast: 10
+  sma_slow: 25
   use_rsi: true
   rsi_len: 14
-  rsi_buy_min: 50
-  rsi_sell_max: 45
+  rsi_buy_min: 55      # koop alleen bij duidelijk momentum
+  rsi_sell_max: 45     # verkoop / geen nieuwe positie bij zwakte
 
 risk:
-  fixed_stake_quote: 15     # vaste inzet per trade (winst wordt niet herbelegd)
+  fixed_stake_quote: 20     # vaste inzet per trade (winst wordt niet herbelegd)
   stake_fraction: 0.00      # niet gebruikt omdat fixed_stake_quote > 0
-  max_open_positions: 10
+  max_open_positions: 6     # max aantal gelijktijdige coins
   max_pct_per_coin: 25
   only_buy_if_not_in_position: true
   single_open_buy_per_coin: true
-  cooldown_minutes: 15
-  max_spread_pct: 0.20
+  cooldown_minutes: 30      # minstens 30 min pauze per coin na sluiten
+  max_spread_pct: 0.15      # alleen handelen bij smalle spread
 
 protection:
   take_profit_pct: 3.0
