--- a/metFig.yaml
+++ b/metFig.yaml
@@ -6,26 +6,54 @@ signals:
   use_sma: true
   sma_fast: 10
   sma_slow: 25
+
   use_rsi: true
   rsi_len: 14
-  rsi_buy_min: 55
-  rsi_sell_max: 45
+
+  # Uptrend: iets meer kansen maar geen "overtrading"
+  rsi_buy_min: 52
+  rsi_sell_max: 48
+
+  # Downtrend: mean-reversion (koop oversold, verkoop bounce)
+  enable_downtrend: true
+  down_rsi_buy_max: 30
+  down_rsi_sell_min: 45
+  down_require_rsi_uptick: true
 
 risk:
-  fixed_stake_quote: 20      # vaste inzet per trade in EUR
-  stake_fraction: 0.00       # niet gebruikt omdat fixed_stake_quote > 0
+  # Vaste inzet zodat winst niet automatisch wordt herbelegd
+  fixed_stake_quote: 20
+  stake_fraction: 0.00
+
+  # Risico-beperking
   max_open_positions: 6
-  max_pct_per_coin: 25       # max % van bruikbaar EUR per coin
+  max_pct_per_coin: 20
+
   only_buy_if_not_in_position: true
   single_open_buy_per_coin: true
+
+  # Minder churn
   cooldown_minutes: 30
-  max_spread_pct: 0.15       # max spread in %
-  eur_reserve: 50.0          # minimaal bedrag dat altijd vrij moet blijven
+
+  # Liquiditeit / slippage filter
+  max_spread_pct: 0.15
+
+  # Zorg dat hij niet je hele EUR leeg trekt
+  eur_reserve: 50.0
+
+  # Downtrend: lagere inzet (veiliger)
+  down_stake_multiplier: 0.50
 
 protection:
-  take_profit_pct: 3.0       # TP op +3 %
-  stop_loss_pct: 2.0         # SL op -2 %
-  trailing_tp_pct: 0.0       # 0 = uit
+  # Uptrend exits
+  take_profit_pct: 2.5
+  stop_loss_pct: 1.5
+  trailing_tp_pct: 1.0
+
+  # Downtrend exits (sneller eruit, strakker)
+  down_take_profit_pct: 1.5
+  down_stop_loss_pct: 1.0
+  down_trailing_tp_pct: 0.8
 
 logging:
   level: INFO
