--- a/metFig.yaml
+++ b/metFig.yaml
@@ -3,59 +3,50 @@ symbols: [BTC, ETH, ADA, SOL, XRP]
 timeframe: "15m"
 
 signals:
+  # Trend-only filters
   use_sma: true
-  sma_fast: 10
-  sma_slow: 25
+  sma_fast: 20
+  sma_slow: 50
 
   use_rsi: true
   rsi_len: 14
-
-  # Uptrend: iets meer kansen maar geen "overtrading"
-  rsi_buy_min: 52
+  rsi_buy_min: 58
   rsi_sell_max: 48
 
-  # Downtrend: mean-reversion (koop oversold, verkoop bounce)
-  enable_downtrend: true
-  down_rsi_buy_max: 30
-  down_rsi_sell_min: 45
-  down_require_rsi_uptick: true
+  # Extra: alleen traden als er genoeg beweging is
+  use_atr_filter: true
+  atr_len: 14
+  min_atr_pct: 0.25
 
 risk:
-  # Vaste inzet zodat winst niet automatisch wordt herbelegd
-  fixed_stake_quote: 20
+  fixed_stake_quote: 15        # vaste inzet per trade, winst wordt niet herbelegd
   stake_fraction: 0.00
 
-  # Risico-beperking
-  max_open_positions: 6
-  max_pct_per_coin: 20
+  # Minder exposure tegelijk
+  max_open_positions: 2
+  max_pct_per_coin: 25
 
   only_buy_if_not_in_position: true
   single_open_buy_per_coin: true
 
-  # Minder churn
-  cooldown_minutes: 30
+  # Veel minder frequent traden
+  cooldown_minutes: 60
 
-  # Liquiditeit / slippage filter
-  max_spread_pct: 0.15
+  # Strenger: slechte fills vermijden
+  max_spread_pct: 0.12
 
-  # Zorg dat hij niet je hele EUR leeg trekt
-  eur_reserve: 50.0
-
-  # Downtrend: lagere inzet (veiliger)
-  down_stake_multiplier: 0.50
+  # Extra reserve zodat je niet “leeg” handelt
+  eur_reserve: 50
 
 protection:
-  # Uptrend exits
-  take_profit_pct: 2.5
-  stop_loss_pct: 1.5
-  trailing_tp_pct: 1.0
+  # Verder van de prijs zodat fees minder slopen
+  take_profit_pct: 5.0
+  stop_loss_pct: 2.0
 
-  # Downtrend exits (sneller eruit, strakker)
-  down_take_profit_pct: 1.5
-  down_stop_loss_pct: 1.0
-  down_trailing_tp_pct: 0.8
+  # Laat winnaars doorlopen
+  trailing_tp_pct: 2.0
 
 logging:
   level: INFO
   loop_sleep_seconds: 30
-  candles_limit: 300
+  candles_limit: 400
