--- a/metFig.yaml
+++ b/metFig.yaml
@@ -1,5 +1,4 @@
-# config.yaml (ENGLISH, matches the bot above)
-
+# config.yaml (STRICT ENGLISH; unknown keys will stop the bot)
 quote: EUR
 symbols: [BTC, ETH, ADA, SOL, XRP]
 timeframe: "15m"
@@ -18,7 +17,6 @@ signals:
   atr_tp_mult: 2.0
   atr_sl_mult: 1.8
 
-  # Sell if trend breaks (SMA fast < SMA slow)
   exit_on_trend_break: WAAR
 
   # Optional: only trade if volatility is high enough (ATR% of price)
@@ -26,15 +24,18 @@ signals:
   min_atr_pct: 0.25
 
 risk:
+  # Set to true first to test safely (no real orders)
+  dry_run: false
+
   fixed_stake_quote: 15
   max_open_positions: 2
   only_buy_if_not_in_position: true
-  cooldown_minutes: 60
+  cooldown_minutes: 45
 
-  # Spread in PERCENT (0.12 = 0.12%):
-  max_spread_pct: 0.12
+  # Spread in PERCENT: 0.10 = 0.10% (very strict)
+  max_spread_pct: 0.10
 
-  # Keep EUR aside so you don't trade the account empty
+  # Keep cash aside
   eur_reserve: 50
 
 fees:
